platforms/gke/base/use-cases/federated-learning/terraform/example_cross_device/templates/cross_device_virtual_services.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
# Direct traffic from the ingress gateway to the server
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingress-gateway-${federated_learning_example}-to-${cross_device_workload_name}
  namespace: istio-ingress
spec:
  gateways:
    - istio-ingress/ingress-gateway-${federated_learning_example}
  hosts:
    - "*"
  tcp:
    - match:
        - port: ${cross_device_workload_port}
      route:
        - destination:
            host: ${cross_device_workload_name}.${namespace_name}.svc.cluster.local
            port:
              number: ${cross_device_workload_port}
          weight: 100
