platforms/gke/base/use-cases/federated-learning/terraform/example_cross_device/templates/cross_device_authorization_policies.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-ingress-gateway-to-${namespace_name}-cross-device-port
  namespace: ${namespace_name}
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - "istio-ingress"
    - to:
        - operation:
            ports:
              - "5000"
              - "8082"
              - "8083"
---
# Allow traffic to cross device ports
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress-to-ingressgateway-cross-device
  namespace: istio-ingress
spec:
  action: ALLOW
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
    - to:
        - operation:
            ports:
              - "5000"
              - "8082"
              - "8083"
